# rag-explorations

./: .gitignore  QUERY_VISUALIZATION_FEATURES.md  README.md  STREAMLIT_README.md  cli.py  constants.py  delete_collection.py  demo_streamlit.py  embed.py  get_embedding_function.py  populate_database.py  pyproject.toml  query_data.py  requirements.txt  requirements_streamlit.txt  run_streamlit.py  setup.py  streamlit_app.py  test.py  test_database_reset.py  test_diverse_search.py  test_embeddings.py  test_query_viz.py  test_rag.py  visualize.py
chroma/13bbafac-f16b-4036-a0fb-7fd0c5c9bd38/: index_metadata.pickle
chroma/900e73de-bbc1-4118-a0a5-7715e6f9c628/: index_metadata.pickle
chroma_db/: chroma.sqlite3
http/localhost8000/: chroma.sqlite3
src/: __init__.py
src/models/: __init__.py  database.py  document_processor.py  query_engine.py
src/utils/: __init__.py  config.py  embeddings.py  exceptions.py  logging_config.py
tests/: __init__.py  test_rag_system.py
